# rust_llmproxy

./: .gitignore  Cargo.toml  README.md  config.example.yaml
.github/workflows/: release.yml
src/: config.rs  error.rs  main.rs  models.rs  router.rs
src/auth/: anthropic_oauth.rs  github_device_oauth.rs  mod.rs  token_store.rs
src/providers/: anthropic.rs  copilot.rs  custom.rs  mod.rs  openai.rs  phi4.rs
src/rtk/: compress.rs  detect.rs  mod.rs  scoring.rs
src/server/: handlers.rs  mod.rs
src/transform/: mod.rs  openai_anthropic.rs
src/updater/: mod.rs
src/web/: dashboard.html  mod.rs
